name:                hledger-add
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/rootzlevel/hledger-add#readme
license:             BSD3
license-file:        LICENSE
author:              Hans-Peter Deifel
maintainer:          hpd@hpdeifel.de
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hledger-add
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hledger-lib
                     , brick
                     , vty
                     , data-default
                     , text
                     , lens
                     , text-zipper
                     , transformers
                     , time

  ghc-options:         -threaded
