name:                hledger-iadd
version:             1.0
synopsis:            A terminal UI as drop-in replacement for hledger add
description:         Please see README.md
homepage:            http://github.com/rootzlevel/hledger-iadd#readme
license:             BSD3
license-file:        LICENSE
author:              Hans-Peter Deifel
maintainer:          hpd@hpdeifel.de
copyright:           2016 Hans-Peter Deifel
category:            Finance, Console
build-type:          Simple
cabal-version:       >=1.10
                     
source-repository head
  type: git
  location: https://github.com/rootzlevel/hledger-iadd.git
  
library
  hs-source-dirs:      src
  exposed-modules:     Model
                     , View
                     , AmountParser
                     , DateParser
                     , ConfigParser
                     , Brick.Widgets.List.Utils
                     , Brick.Widgets.HelpMessage
                     , Brick.Widgets.BetterDialog
  default-language:    Haskell2010
  build-depends:       base >= 4.8 && < 5
                     , hledger-lib >= 1.0 && < 1.1
                     , brick >= 0.14 && < 0.15
                     , vty >= 5.4
                     , text
                     , microlens
                     , text-zipper
                     , transformers >= 0.3
                     , time >= 1.5
                     , vector
                     , megaparsec >= 5.0 && <5.2
                     , containers
                     , optparse-applicative
                     , directory
                     , text-format
                     , xdg-basedir
                     , unordered-containers
                     , free >= 4.12.4

executable hledger-iadd
  hs-source-dirs:      src/main
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.8 && < 5
                     , hledger-iadd
                     , hledger-lib >= 1.0 && < 1.1
                     , brick >= 0.14 && < 0.15
                     , vty >= 5.4
                     , text
                     , microlens
                     , text-zipper
                     , transformers >= 0.3
                     , time >= 1.5
                     , vector
                     , optparse-applicative
                     , directory
                     , text-format
                     , xdg-basedir
                     , unordered-containers
                     , free >= 4.12.4

  ghc-options:         -threaded

test-suite spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Spec.hs
  other-modules:      DateParserSpec
                    , ConfigParserSpec
  default-language:   Haskell2010
  build-depends:      base >= 4.8 && < 5
                    , hledger-iadd
                    , hledger-lib >= 1.0 && < 1.1
                    , text
                    , transformers >= 0.3
                    , time >= 1.5
                    , vector
                    , hspec
                    , QuickCheck
                    , text-format
                    , free >= 4.12.4
  ghc-options:        -threaded
