name:                hledger-iadd
version:             1.2.6
synopsis:            A terminal UI as drop-in replacement for hledger add
description:         This is a terminal UI as drop-in replacement for hledger add.
                     .
                     It improves in the following ways on hledger's add command:
                     .
                       * Interactive as-you-type completion for
                         account names and descriptions with optional
                         fuzzy matching.
                     .
                       * Integrated calculator: Amounts can be written
                         as simple sums with real-time feedback on the
                         result.
                     .
                       * All actions while entering a transaction can
                         be undone
                     .
                       * Configurable format for date input. Instead
                         of @y\/m\/d@ it is also possible to use other
                         formats like the german @d.m.y@.

homepage:            https://github.com/hpdeifel/hledger-iadd#readme
bug-reports:         https://github.com/hpdeifel/hledger-iadd/issues
license:             BSD3
license-file:        LICENSE
author:              Hans-Peter Deifel <hpd@hpdeifel.de>
maintainer:          Hans-Peter Deifel <hpd@hpdeifel.de>
copyright:           2017 Hans-Peter Deifel
category:            Finance, Console
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.10.3, GHC==8.0
                     
extra-source-files:
  doc/screencast.gif
  README.md
  ChangeLog.md

source-repository head
  type: git
  location: https://github.com/hpdeifel/hledger-iadd.git
  
library
  hs-source-dirs:      src
  exposed-modules:     Model
                     , View
                     , AmountParser
                     , DateParser
                     , ConfigParser
                     , Brick.Widgets.List.Utils
                     , Brick.Widgets.HelpMessage
                     , Brick.Widgets.CommentDialog
                     , Brick.Widgets.BetterDialog
                     , Brick.Widgets.WrappedText
                     , Brick.Widgets.Edit.EmacsBindings
                     , Text.Megaparsec.Compat
  default-language:    Haskell2010
  build-depends:       base >= 4.8 && < 5
                     , hledger-lib >= 1.0 && < 1.5
                     , brick >= 0.17 && < 0.31
                     , vty >= 5.4
                     , text
                     , microlens
                     , microlens-th
                     , text-zipper >= 0.10
                     , transformers >= 0.3
                     , time >= 1.5
                     , vector
                     , megaparsec >= 5.0 && <6.4
                     , containers
                     , optparse-applicative
                     , directory
                     , text-format
                     , xdg-basedir
                     , unordered-containers
                     , free >= 4.12.4
                     , semigroups >= 0.5.0
  ghc-options:         -Wall -fdefer-typed-holes -fno-warn-name-shadowing

executable hledger-iadd
  hs-source-dirs:      src/main
  main-is:             Main.hs
  other-modules:       Paths_hledger_iadd
  default-language:    Haskell2010
  build-depends:       base >= 4.8 && < 5
                     , hledger-iadd
                     , hledger-lib >= 1.0 && < 1.5
                     , brick >= 0.17 && < 0.31
                     , vty >= 5.4
                     , text
                     , microlens
                     , text-zipper >= 0.10
                     , transformers >= 0.3
                     , time >= 1.5
                     , vector
                     , optparse-applicative
                     , directory
                     , text-format
                     , xdg-basedir
                     , unordered-containers
                     , free >= 4.12.4
                     , megaparsec >= 5.0 && <6.4
  ghc-options:         -threaded -Wall -fdefer-typed-holes -fno-warn-name-shadowing

test-suite spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Spec.hs
  other-modules:      DateParserSpec
                    , ConfigParserSpec
                    , AmountParserSpec
                    , ModelSpec
  default-language:   Haskell2010
  build-depends:      base >= 4.8 && < 5
                    , hledger-iadd
                    , hledger-lib >= 1.0 && < 1.5
                    , text
                    , transformers >= 0.3
                    , time >= 1.5
                    , vector
                    , hspec
                    , QuickCheck
                    , text-format
                    , free >= 4.12.4
                    , megaparsec >= 5.0 && <6.4
                    , text-zipper >= 0.10
  ghc-options:        -threaded -Wall -fdefer-typed-holes -fno-warn-name-shadowing
