name:                hledger-iadd
version:             1.3.17
synopsis:            A terminal UI as drop-in replacement for hledger add
description:         This is a terminal UI as drop-in replacement for hledger add.
                     .
                     It improves in the following ways on hledger's add command:
                     .
                       * Interactive as-you-type completion for
                         account names and descriptions with optional
                         fuzzy matching.
                     .
                       * Integrated calculator: Amounts can be written
                         as simple sums with real-time feedback on the
                         result.
                     .
                       * All actions while entering a transaction can
                         be undone
                     .
                       * Configurable format for date input. Instead
                         of @y\/m\/d@ it is also possible to use other
                         formats like the german @d.m.y@.

homepage:            https://github.com/hpdeifel/hledger-iadd#readme
bug-reports:         https://github.com/hpdeifel/hledger-iadd/issues
license:             BSD3
license-file:        LICENSE
author:              Hans-Peter Deifel <hpd@hpdeifel.de>
maintainer:          Hans-Peter Deifel <hpd@hpdeifel.de>
copyright:           2018 Hans-Peter Deifel
category:            Finance, Console
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC ==8.6.5
                   , GHC ==8.8.4
                   , GHC ==8.10.4

extra-source-files:
  doc/screencast.gif
  README.md
  ChangeLog.md

source-repository head
  type: git
  location: https://github.com/hpdeifel/hledger-iadd.git
  
library
  hs-source-dirs:      src
  exposed-modules:     Model
                     , View
                     , AmountParser
                     , DateParser
                     , ConfigParser
                     , Brick.Widgets.List.Utils
                     , Brick.Widgets.HelpMessage
                     , Brick.Widgets.CommentDialog
                     , Brick.Widgets.BetterDialog
                     , Brick.Widgets.WrappedText
                     , Brick.Widgets.Edit.EmacsBindings
                     , Brick.Widgets.Border.Utils
                     , Data.Time.Ext
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 5
                     , hledger-lib >= 1.23 && < 1.26
                     , brick >= 0.27
                     , vty >= 5.4
                     , text
                     , microlens
                     , microlens-th
                     , text-zipper >= 0.10
                     , transformers >= 0.3
                     , time >= 1.5
                     , vector
                     , megaparsec >= 7.0 && <9.3
                     , containers
                     , optparse-applicative
                     , directory
                     , xdg-basedir
                     , unordered-containers
                     , free >= 4.12.4
  ghc-options:         -Wall -fdefer-typed-holes -fno-warn-name-shadowing

executable hledger-iadd
  hs-source-dirs:      src/main
  main-is:             Main.hs
  other-modules:       Paths_hledger_iadd
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 5
                     , hledger-iadd
                     , hledger-lib >= 1.23 && < 1.26
                     , brick >= 0.27
                     , vty >= 5.4
                     , text
                     , microlens
                     , text-zipper >= 0.10
                     , transformers >= 0.3
                     , time >= 1.5
                     , vector
                     , optparse-applicative
                     , directory
                     , xdg-basedir
                     , unordered-containers
                     , free >= 4.12.4
                     , megaparsec >= 7.0 && <9.3
  ghc-options:         -threaded -Wall -fdefer-typed-holes -fno-warn-name-shadowing

test-suite spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Spec.hs
  other-modules:      DateParserSpec
                    , ConfigParserSpec
                    , AmountParserSpec
                    , ModelSpec
  default-language:   Haskell2010
  build-depends:      base >= 4.12 && < 5
                    , hledger-iadd
                    , hledger-lib >= 1.23 && < 1.26
                    , text
                    , transformers >= 0.3
                    , time >= 1.5
                    , vector
                    , hspec
                    , QuickCheck
                    , free >= 4.12.4
                    , megaparsec >= 7.0 && <9.3
                    , text-zipper >= 0.10
  build-tool-depends: hspec-discover:hspec-discover ==2.*
  ghc-options:        -threaded -Wall -fdefer-typed-holes -fno-warn-name-shadowing
